--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 TODO Dolce: $Id$
--Add a new input parameter to limit the size of incoming emails (at the list
- level)
--Store emails as CPSDocument instances (done), using FileWidget(s) for attachments (not tested yet)
+- Add a new input parameter to limit the size of incoming emails (at the list
+  level)
+- Provide a GUI for mail moderation (the current mechanism only relies on
+  MailBoxer's facilities and is not well integrated with CPS)
 
