--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
 "POT-Creation-Date: 2004-03-10 16:52default\n"
-"PO-Revision-Date: 2004-03-10 17:02+0100\n"
+"PO-Revision-Date: 2004-03-11 08:55+0100\n"
 "Last-Translator: emmanuel <epietriga@nuxeo.com>\n"
 "Language-Team: francais <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -77,7 +77,7 @@ msgstr "Création d'une lettre d'information"
 #.           </em>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_subscribe_form.pt
 msgid "nmb_label_already_subscribed ${mail_addr}"
-msgstr "Vous êtes déjà abonné à cette liste avec l'adresse ${mail_addr}"
+msgstr "Vous êtes abonné à cette liste avec l'adresse ${mail_addr}"
 
 #.   <td>nmb_label_apr</td>
 #: from ../skins/cpsmailboxer_default/boxes_cpsmailboxer.pt
