--- a/TODO
+++ b/TODO
@@ -4,4 +4,5 @@ TODO Dolce: $Id$
 - Provide a GUI for mail moderation (the current mechanism only relies on
   MailBoxer's facilities and is not well integrated with CPS)
 - CPSMailArchive workflow should only be defined in CPSMailBoxerFolder
-
+- Check that 1st mail of the month archival problem in moderation mode has
+  really disappeared
