--- a/CHANGES
+++ b/CHANGES
@@ -5,7 +5,9 @@ ZODB Requires:
 New features:
 ~~~~~~~~~~~~~
 - Creation of a mail is now possible from CPS
-
+- Moderation mode is working ok (relis on MailBoxer for now,
+  no CPS-specific interface)
+  
 Bug fixes:
 ~~~~~~~~~~
 - fixed breadcrumb bug in archives by defining a default view 
@@ -15,4 +17,4 @@ New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - archives are now stored using CPSDocument CPSMailArchive
 - renamed everything from NuxMailBoxer to CPSMailBoxer
-
+- widgets are now encapsulated in boxes
