precisions about what is expected in Moderator field

--- a/i18n/en.po
+++ b/i18n/en.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: en\n"
-"POT-Creation-Date: 2004-03-10 16:52default\n"
-"PO-Revision-Date: 2004-03-11 08:55+0100\n"
+"POT-Creation-Date: 2004-03-22 12:55default\n"
+"PO-Revision-Date: 2004-03-22 12:56+0100\n"
 "Last-Translator: emmanuel <epietriga@nuxeo.com>\n"
 "Language-Team: francais <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Language-name: Language\n"
 "Preferred-encodings: utf-8 latin1\n"
 "Domain: default\n"
-"X-Generator: KBabel 1.0.2\n"
+"X-Generator: KBabel 1.3.1\n"
 
 #.   <em>
 #.             ${mail_addr (tal replace="email")} nmb_label_not_yet_subscribed
@@ -26,15 +26,14 @@ msgstr ""
 msgid "${mail_addr} nmb_label_not_yet_subscribed"
 msgstr "${mail_addr} is not yet subscribed to this list"
 
-#.   <p>
-#.               ${nb_members (tal replace="python:len(members)")} nmb_label_nb_members
-#.             </p>
+#.   <div>
+#.             ${nb_members (tal replace="python:len(members)")} nmb_label_nb_members
+#.           </div>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_members_edit_form.pt
 msgid "${nb_members} nmb_label_nb_members"
 msgstr "${nb_members} users are subscribed to the list"
 
 #.   <h2>nmb_heading_archives</h2>
-#.   <h1>nmb_heading_archives</h1>
 #: from ../skins/cpsmailboxer_default/boxes_cpsmailboxer.pt
 #: ../skins/cpsmailboxer_default/cpsmailboxer_content_view.pt
 msgid "nmb_heading_archives"
@@ -52,8 +51,6 @@ msgstr "Editing list \"${title}\""
 msgid "nmb_heading_mailing_list ${title}"
 msgstr "Mailing List \"${title}\""
 
-#.   <h2>nmb_heading_mailing_list &nbsp;${title (tal replace="here/title_or_id")}&nbsp;
-#.         </h2>
 #.   <h2>nmb_heading_mailing_list &nbsp;${title (tal replace="here/title_or_id")}&nbsp;</h2>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_search_result.pt
 #: ../skins/cpsmailboxer_default/cpsmailboxer_view.pt
@@ -61,8 +58,8 @@ msgid "nmb_heading_mailing_list &nbsp;${title}&nbsp;"
 msgstr "Mailing List \"${title}\""
 
 #.   <h2>
-#.           nmb_heading_member_edit ${title (tal replace="here/title_or_id")}
-#.         </h2>
+#.         nmb_heading_member_edit ${title (tal replace="here/title_or_id")}
+#.       </h2>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_members_edit_form.pt
 msgid "nmb_heading_member_edit ${title}"
 msgstr "Managing users subscribed to list \"${title}\""
@@ -85,7 +82,7 @@ msgstr "${mail_addr} is subscribed to this list"
 msgid "nmb_label_apr"
 msgstr "apr"
 
-#.   <p>nmb_label_archive_of ${archive (tal replace="here/id")}</p>
+#.   <div>nmb_label_archive_of ${archive (tal replace="here/id")}</div>
 #: from ../skins/cpsmailboxer_default/cpsmailboxerfolder_view.pt
 msgid "nmb_label_archive_of ${archive}"
 msgstr "Archives of ${archive}"
@@ -95,7 +92,7 @@ msgstr "Archives of ${archive}"
 msgid "nmb_label_archived"
 msgstr "Archived"
 
-#.   <b>nmb_label_attachments</b>
+#.   <strong>nmb_label_attachments</strong>
 #: from ../skins/cpsmailboxer_default/cpsmailboxerfolder_view.pt
 msgid "nmb_label_attachments"
 msgstr "Attachments"
@@ -123,8 +120,7 @@ msgstr "Date:"
 msgid "nmb_label_dec"
 msgstr "dec"
 
-#.   <input value="nmb_label_delete" class="destructive" type="submit">
-#.             </input>
+#.   <input value="nmb_label_delete" class="destructive" type="submit" />
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_members_edit_form.pt
 msgid "nmb_label_delete"
 msgstr "Delete"
@@ -196,10 +192,10 @@ msgstr "mar"
 msgid "nmb_label_may"
 msgstr "may"
 
-#.   <span>nmb_label_moderator</span>
+#.   <span class="label required">nmb_label_moderator</span>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
 msgid "nmb_label_moderator"
-msgstr "Moderator"
+msgstr "Moderator (email)"
 
 #.   <span>nmb_label_modetared</span>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
@@ -211,13 +207,13 @@ msgstr "Moderated"
 msgid "nmb_label_mtahosts"
 msgstr "Authorized servers"
 
-#.   <p style="border-top:solid;border-width:1px">nmb_label_no_archive</p>
+#.   <div class="mailboxerNoArchive">nmb_label_no_archive</div>
 #: from ../skins/cpsmailboxer_default/boxes_cpsmailboxer.pt
 #: ../skins/cpsmailboxer_default/cpsmailboxer_content_view.pt
 msgid "nmb_label_no_archive"
 msgstr "No archive available for this list"
 
-#.   <p>nmb_label_no_member</p>
+#.   <div>nmb_label_no_member</div>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_members_edit_form.pt
 msgid "nmb_label_no_member"
 msgstr "No member"
@@ -250,16 +246,14 @@ msgstr "oct"
 msgid "nmb_label_plain_text"
 msgstr "plain text"
 
-#.   <input value="nmb_label_search" name="search" type="submit">
-#.                </input>
-#.   <input value="nmb_label_search" class="standalone" name="search" type="submit">
-#.              </input>
+#.   <input value="nmb_label_search" name="search" type="submit" />
+#.   <input value="nmb_label_search" class="standalone" name="search" type="submit" />
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_search_result.pt
 #: ../skins/cpsmailboxer_default/cpsmailboxerfolder_view.pt
 msgid "nmb_label_search"
 msgstr "Search"
 
-#.   <p>nmb_label_select_members_to_delete</p>
+#.   <div>nmb_label_select_members_to_delete</div>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_members_edit_form.pt
 msgid "nmb_label_select_members_to_delete"
 msgstr "Select members to delete"
@@ -286,10 +280,7 @@ msgstr "Subscribe another email address"
 msgid "nmb_label_subject"
 msgstr "Subject:"
 
-#.   <input value="nmb_label_subscribe" class="standalone" type="submit">
-#.         </input>
-#.   <input value="nmb_label_subscribe" class="standalone" type="submit">
-#.       </input>
+#.   <input value="nmb_label_subscribe" class="standalone" type="submit" />
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_subscribe_form.pt
 msgid "nmb_label_subscribe"
 msgstr "Subscribe"
@@ -299,8 +290,7 @@ msgstr "Subscribe"
 msgid "nmb_label_title"
 msgstr "Title"
 
-#.   <input value="nmb_label_unsubscribe" class="destructive" type="submit">
-#.         </input>
+#.   <input value="nmb_label_unsubscribe" class="destructive" type="submit" />
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_subscribe_form.pt
 msgid "nmb_label_unsubscribe"
 msgstr "Unsubscribe"
@@ -311,8 +301,7 @@ msgstr "Unsubscribe"
 msgid "nmb_label_up"
 msgstr "Parent Directory"
 
-#.   <input value="nmb_label_validate" class="standalone" type="submit">
-#.                 </input>
+#.   <input value="nmb_label_validate" class="standalone" type="submit" />
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
 msgid "nmb_label_validate"
 msgstr "Save Changes"
@@ -335,7 +324,9 @@ msgid "portal_type_CPSMailBoxer_title"
 msgstr "Distribution List"
 
 msgid "portal_type_CPSMailBoxer_description"
-msgstr "Tool for managing and archiving distribution lists (archiving, forwarding, subscription)"
+msgstr ""
+"Tool for managing and archiving distribution lists (archiving, forwarding, "
+"subscription)"
 
 msgid "portal_type_CPSMailBoxerFolder_title"
 msgstr "Mail archive folder (for distribution lists)"
