--- a/i18n/nl.po
+++ b/i18n/nl.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: en\n"
-"POT-Creation-Date: 2004-03-22 12:55default\n"
+"POT-Creation-Date: 2004-03-25 17:04default\n"
 "PO-Revision-Date: 2003-12-19 16:51+0100\n"
 "Last-Translator: emmanuel <epietriga@nuxeo.com>\n"
 "Language-Team: francais <fr@li.org>\n"
@@ -87,7 +87,7 @@ msgstr "apr"
 msgid "nmb_label_archive_of ${archive}"
 msgstr "Archives of ${archive}"
 
-#.   <span>nmb_label_archived</span>
+#.   <div class="label">nmb_label_archived</div>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
 msgid "nmb_label_archived"
 msgstr "Archived"
@@ -125,7 +125,7 @@ msgstr "dec"
 msgid "nmb_label_delete"
 msgstr "Delete"
 
-#.   <span>nmb_label_description</span>
+#.   <div class="label">nmb_label_description</div>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
 msgid "nmb_label_description"
 msgstr "Description"
@@ -175,7 +175,7 @@ msgstr "jul"
 msgid "nmb_label_jun"
 msgstr "jun"
 
-#.   <span>nmb_label_mailto</span>
+#.   <div class="label required">nmb_label_mailto</div>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
 msgid "nmb_label_mailto"
 msgstr "List's email address"
@@ -192,17 +192,17 @@ msgstr "mar"
 msgid "nmb_label_may"
 msgstr "may"
 
-#.   <span class="label required">nmb_label_moderator</span>
+#.   <div class="label required">nmb_label_moderator</div>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
 msgid "nmb_label_moderator"
 msgstr "Moderator"
 
-#.   <span>nmb_label_modetared</span>
+#.   <div class="label">nmb_label_modetared</div>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
 msgid "nmb_label_modetared"
 msgstr "Moderated"
 
-#.   <span>nmb_label_mtahosts</span>
+#.   <div class="label">nmb_label_mtahosts</div>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
 msgid "nmb_label_mtahosts"
 msgstr "Authorized servers"
@@ -286,7 +286,7 @@ msgstr "Subject:"
 msgid "nmb_label_subscribe"
 msgstr "Subscribe"
 
-#.   <span>nmb_label_title</span>
+#.   <div class="label">nmb_label_title</div>
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
 msgid "nmb_label_title"
 msgstr "Title"
@@ -348,23 +348,23 @@ msgid "psm_removed_members"
 msgstr "Subscriber(s) removed"
 
 #, fuzzy
-msgid "nmb_label_mail_from"
+msgid "label_mail_from"
 msgstr "List's email address"
 
 #, fuzzy
-msgid "nmb_label_mail_subject"
+msgid "label_mail_subject"
 msgstr "Subject:"
 
 #, fuzzy
-msgid "nmb_label_mail_date"
+msgid "label_mail_date"
 msgstr "Save Changes"
 
 #, fuzzy
-msgid "nmb_label_mail_body"
+msgid "label_mail_body"
 msgstr "List's email address"
 
 #, fuzzy
-msgid "nmb_label_mail_attachment"
+msgid "label_mail_attachment"
 msgstr "Attachments"
 
 msgid "Create Newsletter"
