--- a/i18n/en.po
+++ b/i18n/en.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: en\n"
-"POT-Creation-Date: 2004-03-25 17:04default\n"
-"PO-Revision-Date: 2004-03-22 12:56+0100\n"
+"POT-Creation-Date: 2004-03-29 10:45default\n"
+"PO-Revision-Date: 2004-03-29 10:46+0200\n"
 "Last-Translator: emmanuel <epietriga@nuxeo.com>\n"
 "Language-Team: francais <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Language-name: Language\n"
 "Preferred-encodings: utf-8 latin1\n"
 "Domain: default\n"
-"X-Generator: KBabel 1.3.1\n"
+"X-Generator: KBabel 1.0.2\n"
 
 #.   <em>
 #.             ${mail_addr (tal replace="email")} nmb_label_not_yet_subscribed
@@ -32,6 +32,11 @@ msgstr "${mail_addr} is not yet subscribed to this list"
 #: from ../skins/cpsmailboxer_default/cpsmailboxer_members_edit_form.pt
 msgid "${nb_members} nmb_label_nb_members"
 msgstr "${nb_members} users are subscribed to the list"
+
+#.   <div />
+#: from ../skins/cpsmailboxer_default/cpsmailboxer_edit_form.pt
+msgid "cpsmailboxer_required_field"
+msgstr "Required field"
 
 #.   <h2>nmb_heading_archives</h2>
 #: from ../skins/cpsmailboxer_default/boxes_cpsmailboxer.pt
@@ -218,7 +223,7 @@ msgstr "No archive available for this list"
 msgid "nmb_label_no_member"
 msgstr "No member"
 
-#.   <option attributes="selected 
+#.   <option attributes="selected
 #.                                               python:
 #.                                                 test(here.archived == 'not archived',
 #.                                                      'selected',nothing)" value="not archived">nmb_label_not_archived</option>
@@ -238,7 +243,7 @@ msgstr "nov"
 msgid "nmb_label_oct"
 msgstr "oct"
 
-#.   <option attributes="selected 
+#.   <option attributes="selected
 #.                                               python:
 #.                                                 test(here.archived == 'plain text',
 #.                                                      'selected',nothing)" value="plain text">nmb_label_plain_text</option>
@@ -306,7 +311,7 @@ msgstr "Parent Directory"
 msgid "nmb_label_validate"
 msgstr "Save Changes"
 
-#.   <option attributes="selected 
+#.   <option attributes="selected
 #.                                               python:
 #.                                                 test(here.archived == 'with attachments',
 #.                                                      'selected',nothing)" value="with attachments">nmb_label_with attach</option>
@@ -348,23 +353,18 @@ msgstr ""
 msgid "psm_removed_members"
 msgstr "Subscriber(s) removed"
 
-#, fuzzy
 msgid "label_mail_from"
 msgstr "From :"
 
-#, fuzzy
 msgid "label_mail_subject"
 msgstr "Subject:"
 
-#, fuzzy
 msgid "label_mail_date"
 msgstr "Date:"
 
-#, fuzzy
 msgid "label_mail_body"
 msgstr "Message:"
 
-#, fuzzy
 msgid "label_mail_attachment"
 msgstr "Attachment"
 
@@ -412,3 +412,4 @@ msgstr " "
 
 #~ msgid "mailBody_widget_label"
 #~ msgstr "Message body"
+
