make_pkg CPSMailBoxer-0.2.0

--- a/CHANGES
+++ b/CHANGES
@@ -1,22 +1,12 @@
-ZODB Requires:
-~~~~~~~~~~~~~~
-- MailBoxer 3.1 (Nuxeo patched version)
-
+Requires:
+~~~~~~~~~
+-
 New features:
 ~~~~~~~~~~~~~
-- Creation of a mail is now possible from CPS
-- Moderation mode is working ok (relies on MailBoxer for now,
-  no CPS-specific interface)
-  
+-
 Bug fixes:
 ~~~~~~~~~~
-- fixed breadcrumb bug in archives by defining a default view 
-  pointing to nuxmailboxerfolder_view
-
+-
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
-- archives are now stored using CPSDocument CPSMailArchive
-- renamed everything from NuxMailBoxer to CPSMailBoxer
-- widgets are now encapsulated in boxes
-- changed nmb_mapper script for something more reliable and faster
-- XHTMLized
+-
