--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,30 @@
 *******************************************
+** CPSMailBoxer V0.2.0 [R1 build 2004/03/31-14:14 by epietrig]
+
+ZODB Requires:
+~~~~~~~~~~~~~~
+- MailBoxer 3.1 (Nuxeo patched version)
+
+New features:
+~~~~~~~~~~~~~
+- Creation of a mail is now possible from CPS
+- Moderation mode is working ok (relies on MailBoxer for now,
+  no CPS-specific interface)
+  
+Bug fixes:
+~~~~~~~~~~
+- fixed breadcrumb bug in archives by defining a default view 
+  pointing to nuxmailboxerfolder_view
+
+New internal features:
+~~~~~~~~~~~~~~~~~~~~~~
+- archives are now stored using CPSDocument CPSMailArchive
+- renamed everything from NuxMailBoxer to CPSMailBoxer
+- widgets are now encapsulated in boxes
+- changed nmb_mapper script for something more reliable and faster
+- XHTMLized
+
+*******************************************
 ** NuxMailBoxer V0.1.0 [R1 build 2004-01/02-08:31 by epietrig]
 
 ZODB Requires:
