--- a/CHANGES
+++ b/CHANGES
@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- mail attachments were no longer processed
+
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
